Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-21677

Galera test failure on galera_sr.GCF-1060

    XMLWordPrintable

Details

    Description

      2020-02-06T12:35:13.5441200Z galera_sr.GCF-1060 'innodb'              w2 [ fail ]
      2020-02-06T12:35:13.5442595Z         Test ended at 2020-02-06 12:35:13
      2020-02-06T12:35:13.5443003Z 
      2020-02-06T12:35:13.5444070Z CURRENT_TEST: galera_sr.GCF-1060
      2020-02-06T12:35:13.5444516Z mysqltest: In included file "./suite/galera/include/galera_concurrent_test.inc": 
      2020-02-06T12:35:13.5445207Z included from /__w/1/s/mysql-test/suite/galera_sr/t/GCF-1060.test at line 10:
      2020-02-06T12:35:13.5445706Z At line 76: query 'reap' failed with wrong errno 2013: 'Lost connection to MySQL server during query', instead of 0...
      2020-02-06T12:35:13.5445873Z 
      2020-02-06T12:35:13.5445995Z The result from queries just before the failure was:
      2020-02-06T12:35:13.5446141Z < snip >
      2020-02-06T12:35:13.5446281Z connect node_1a, 127.0.0.1, root, , test, $NODE_MYPORT_1;
      2020-02-06T12:35:13.5446437Z Running a concurrent test with the following queries:
      2020-02-06T12:35:13.5446577Z TRUNCATE TABLE t1
      2020-02-06T12:35:13.5446876Z INSERT INTO t1 VALUE (1,'x'),(2,'x'),(3,'x')
      2020-02-06T12:35:13.5447188Z INSERT INTO t1 VALUE (4, 'z');
      2020-02-06T12:35:13.5447337Z connection node_1;
      2020-02-06T12:35:13.5447467Z DROP TABLE IF EXISTS t1;
      2020-02-06T12:35:13.5447602Z CREATE TABLE t1 (f1 INTEGER PRIMARY KEY AUTO_INCREMENT, f2 CHAR(255)) ENGINE=InnoDB;
      2020-02-06T12:35:13.5447788Z SET SESSION wsrep_sync_wait = 0;
      2020-02-06T12:35:13.5447925Z SET SESSION wsrep_trx_fragment_size = 1;;;
      2020-02-06T12:35:13.5448194Z connection node_1a;
      2020-02-06T12:35:13.5448325Z SET SESSION wsrep_sync_wait = 0;
      2020-02-06T12:35:13.5448445Z SET SESSION wsrep_trx_fragment_size = 1;;;
      2020-02-06T12:35:13.5448584Z connection node_2;
      2020-02-06T12:35:13.5448711Z SET SESSION wsrep_sync_wait = 0;
      2020-02-06T12:35:13.5448848Z SET SESSION wsrep_trx_fragment_size = 1;;;
      2020-02-06T12:35:13.5448941Z 
      2020-02-06T12:35:13.5449308Z More results from queries before failure can be found in /var/tmp/mtr/2/log/GCF-1060.log
      2020-02-06T12:35:13.5449432Z 
      2020-02-06T12:35:13.5496371Z 
      2020-02-06T12:35:13.5498651Z Server [mysqld.1 - pid: 62445, winpid: 62445, exit: 256] failed during test run
      2020-02-06T12:35:13.5500311Z Server log from this test:
      2020-02-06T12:35:13.5500776Z ----------SERVER LOG START-----------
      2020-02-06T12:35:13.5501241Z 2020-02-06 12:35:08 464 [Note] WSREP: MDL conflict, DDL vs SR
      2020-02-06T12:35:13.5501502Z schema:  test
      2020-02-06T12:35:13.5501728Z request: (464 	seqno 27449 	wsrep (toi, exec, aborted) cmd 3 8 	TRUNCATE TABLE t1)
      2020-02-06T12:35:13.5502215Z granted: (476 	seqno -1 	wsrep (high priority, exec, executing) cmd 0 161 	(null))
      2020-02-06T12:35:13.5502653Z 2020-02-06 12:35:09 464 [Note] WSREP: MDL conflict, DDL vs SR
      2020-02-06T12:35:13.5502885Z schema:  test
      2020-02-06T12:35:13.5503105Z request: (464 	seqno 27564 	wsrep (toi, exec, aborted) cmd 3 8 	TRUNCATE TABLE t1)
      2020-02-06T12:35:13.5503565Z granted: (496 	seqno -1 	wsrep (high priority, exec, executing) cmd 0 161 	(null))
      2020-02-06T12:35:13.5504016Z 2020-02-06 12:35:09 464 [Note] WSREP: MDL conflict, DDL vs SR
      2020-02-06T12:35:13.5504232Z schema:  test
      2020-02-06T12:35:13.5504450Z request: (464 	seqno 27616 	wsrep (toi, exec, aborted) cmd 3 8 	TRUNCATE TABLE t1)
      2020-02-06T12:35:13.5504912Z granted: (505 	seqno -1 	wsrep (high priority, exec, executing) cmd 0 161 	(null))
      2020-02-06T12:35:13.5505411Z 2020-02-06 12:35:09 464 [Note] WSREP: MDL conflict, DDL vs SR
      2020-02-06T12:35:13.5505643Z schema:  test
      2020-02-06T12:35:13.5505845Z request: (464 	seqno 27682 	wsrep (toi, exec, aborted) cmd 3 8 	TRUNCATE TABLE t1)
      2020-02-06T12:35:13.5506312Z granted: (518 	seqno -1 	wsrep (high priority, exec, executing) cmd 0 161 	(null))
      2020-02-06T12:35:13.5506989Z mysqld: /__w/1/s/padding_for_CPACK_RPM_BUILD_SOURCE_DIRS_PREFIX_ON_ES_BACKUP_DEBUGSOURCE/wsrep-lib/include/wsrep/client_state.hpp:501: int wsrep::client_state::after_rollback(): Assertion `owning_thread_id_ == wsrep::this_thread::get_id()' failed.
      2020-02-06T12:35:13.5507337Z 200206 12:35:09 [ERROR] mysqld got signal 6 ;
      2020-02-06T12:35:13.5507574Z This could be because you hit a bug. It is also possible that this binary
      2020-02-06T12:35:13.5507817Z or one of the libraries it was linked against is corrupt, improperly built,
      2020-02-06T12:35:13.5508047Z or misconfigured. This error can also be caused by malfunctioning hardware.
      2020-02-06T12:35:13.5508400Z 
      2020-02-06T12:35:13.5508829Z To report this bug, see https://mariadb.com/kb/en/reporting-bugs
      2020-02-06T12:35:13.5509018Z 
      2020-02-06T12:35:13.5509233Z We will try our best to scrape up some info that will hopefully help
      2020-02-06T12:35:13.5509469Z diagnose the problem, but since we have already crashed, 
      2020-02-06T12:35:13.5509695Z something is definitely wrong and this may fail.
      2020-02-06T12:35:13.5509863Z 
      2020-02-06T12:35:13.5510249Z Server version: 10.4.12-6-MariaDB-enterprise-log
      2020-02-06T12:35:13.5510683Z key_buffer_size=1048576
      2020-02-06T12:35:13.5510921Z read_buffer_size=131072
      2020-02-06T12:35:13.5511128Z max_used_connections=4
      2020-02-06T12:35:13.5511359Z max_threads=153
      2020-02-06T12:35:13.5511566Z thread_count=14
      2020-02-06T12:35:13.5511814Z It is possible that mysqld could use up to 
      2020-02-06T12:35:13.5512039Z key_buffer_size + (read_buffer_size + sort_buffer_size)*max_threads = 63535 K  bytes of memory
      2020-02-06T12:35:13.5512507Z Hope that's ok; if not, decrease some variables in the equation.
      2020-02-06T12:35:13.5512720Z 
      2020-02-06T12:35:13.5512932Z Thread pointer: 0x7fb7c8046698
      2020-02-06T12:35:13.5513141Z Attempting backtrace. You can use the following information to find out
      2020-02-06T12:35:13.5513488Z where mysqld died. If you see no messages after this, something went
      2020-02-06T12:35:13.5513715Z terribly wrong...
      2020-02-06T12:35:13.5513928Z stack_bottom = 0x7fb7e41258e0 thread_stack 0x49000
      2020-02-06T12:35:13.5514143Z /__w/1/s/bin/mysqld(my_print_stacktrace+0x2e)[0x5589138aca0e]
      2020-02-06T12:35:13.5514384Z /__w/1/s/bin/mysqld(handle_fatal_signal+0x30f)[0x558913335c3f]
      2020-02-06T12:35:13.5514612Z sigaction.c:0(__restore_rt)[0x7fb7f2170680]
      2020-02-06T12:35:13.5514827Z :0(__GI_raise)[0x7fb7f0088207]
      2020-02-06T12:35:13.5515037Z :0(__GI_abort)[0x7fb7f00898f8]
      2020-02-06T12:35:13.5515230Z :0(__assert_fail_base)[0x7fb7f0081026]
      2020-02-06T12:35:13.5515442Z :0(__GI___assert_fail)[0x7fb7f00810d2]
      2020-02-06T12:35:13.5515659Z /__w/1/s/bin/mysqld(+0x8c357e)[0x55891333957e]
      2020-02-06T12:35:13.5515896Z wsrep/client_state.hpp:501(ha_rollback_trans(THD*, bool))[0x55891321f577]
      2020-02-06T12:35:13.5516136Z sql/transaction.cc:343(trans_rollback(THD*))[0x55891328fae1]
      2020-02-06T12:35:13.5516388Z sql/wsrep_high_priority_service.cc:346(Wsrep_high_priority_service::rollback(wsrep::ws_handle const&, wsrep::ws_meta const&))[0x55891394b3b7]
      2020-02-06T12:35:13.5516656Z src/server_state.cpp:240(rollback_fragment)[0x55891394c68a]
      2020-02-06T12:35:13.5516931Z src/server_state.cpp:1125(wsrep::server_state::on_apply(wsrep::high_priority_service&, wsrep::ws_handle const&, wsrep::ws_meta const&, wsrep::const_buffer const&))[0x55891395c6e1]
      2020-02-06T12:35:13.5517495Z /usr/lib64/galera-enterprise-4/libgalera_enterprise_smm.so(+0x174b5f)[0x7fb7e5861b5f]
      2020-02-06T12:35:13.5517979Z /usr/lib64/galera-enterprise-4/libgalera_enterprise_smm.so(+0x1af781)[0x7fb7e589c781]
      2020-02-06T12:35:13.5518462Z /usr/lib64/galera-enterprise-4/libgalera_enterprise_smm.so(+0x1b54c1)[0x7fb7e58a24c1]
      2020-02-06T12:35:13.5518771Z src/trx_handle.cpp:404(galera::TrxHandleSlave::apply(void*, wsrep_cb_status (*)(void*, wsrep_ws_handle const*, unsigned int, wsrep_buf const*, wsrep_trx_meta const*, bool*), wsrep_trx_meta const&, bool&))[0x7fb7e5879194]
      2020-02-06T12:35:13.5519121Z src/replicator_smm.cpp:500(galera::ReplicatorSMM::apply_trx(void*, galera::TrxHandleSlave&))[0x7fb7e5879812]
      2020-02-06T12:35:13.5519400Z src/gcs_action_source.cpp:63(galera::GcsActionSource::process_writeset(void*, gcs_action const&, bool&))[0x7fb7e5879c1e]
      2020-02-06T12:35:13.5519678Z src/gcs_action_source.cpp:110(galera::GcsActionSource::dispatch(void*, gcs_action const&, bool&))[0x7fb7e58a29f3]
      2020-02-06T12:35:13.5519929Z src/gcs_action_source.cpp:29(~Release)[0x7fb7e58b66c8]
      2020-02-06T12:35:13.5520179Z /__w/1/s/bin/mysqld(_ZN5wsrep18wsrep_provider_v2611run_applierEPNS_21high_priority_serviceE+0xe)[0x55891395b1ae]
      2020-02-06T12:35:13.5520455Z src/wsrep_provider_v26.cpp:731(wsrep::wsrep_provider_v26::run_applier(wsrep::high_priority_service*))[0x5589132aa826]
      2020-02-06T12:35:13.5520789Z sql/wsrep_thd.cc:62(wsrep_replication_process(THD*, void*))[0x55891329b5d4]
      2020-02-06T12:35:13.5521035Z sql/wsrep_mysqld.cc:2749(start_wsrep_THD(void*))[0x55891386076d]
      2020-02-06T12:35:13.5521272Z pthread_create.c:0(start_thread)[0x7fb7f2168dd5]
      2020-02-06T12:35:13.5521491Z /lib64/libc.so.6(clone+0x6d)[0x7fb7f0150b3d]
      

      Attachments

        Issue Links

          Activity

            People

              stepan.patryshev Stepan Patryshev (Inactive)
              jplindst Jan Lindström (Inactive)
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Git Integration

                  Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.