MDEV-21677 Assertion `owning_thread_id_ == wsrep::this_thread::get_id()'

Update wsrep-lib to include fixes in rollback processing for streaming
transactions. Avoid the case where both rollbacker and rollback
fragment attempt to rollback the same transaction
concurrently (leading to the assert in title).
The patch includes a new MTR test that reproduces the issue
deterministically.